# cmpe142

./: .gitignore  CMakeLists.txt  HW2.rar  MakeTable.cpp  PipeMakeTable.cpp  PipeMakeTable_backup.cpp  ReadCSV.cpp  child.cpp  echo.cpp  maketable.cpp  parent.cpp  part1.sh  part2.sh  presidents.html  read.html  readcsv.cpp
